# expertAi

./: .env.example  .gitignore  CONTINUE_SPRINT_3_PROMPT.md  README.md  SPRINT_1_2_VERIFICATION_REPORT.md  SPRINT_1_REVIEW.md  SPRINT_2_REVIEW.md  SPRINT_3_REVIEW.md  docker-compose.dev.yml  docker-compose.yml  health_check.sh  start-dev-tailscale.sh  start-tailscale.sh  tailscale-health-check.sh
.sprints/: header.md  original_prompt.md  (+8 more)
backend/: .gitignore  Dockerfile  README.md  migrate_database.py  mock_llm_service.py  pyproject.toml  quick_test.py  requirements.txt  simple_test.py  start_server.py  test_llm_simple.py  test_rag_integration.py  test_single_pdf.py
backend/app/: main.py
backend/app/apis/v1/: __init__.py  router_collections.py  router_pdfs.py  router_qa.py
backend/app/core/: config.py  config_validator.py
backend/app/db/: session.py
backend/app/models/: db_models.py  schemas.py
backend/app/rag_components/: chunker.py  embedder.py  llm_handler.py  vector_store_interface.py
backend/app/services/: admin_service.py  collection_service.py  pdf_ingestion_service.py  rag_service.py
backend/app/utils/: initial_corpus_ingest.py
backend/scripts/: README.md  db_manager.py  debug_startup.py  fix_pdf_paths.py  migrate_database.py  migrate_to_postgres.py
backend/tests/integration/: test_complete_pipeline.py  test_rag_integration.py  test_rag_pipeline.py  test_server.py  test_server_endpoints.py  test_server_simple.py
backend/tests/unit/: test_components.py  test_db_init.py  test_quick_status.py  test_sprint2_review.py  test_sprint_verification.py
(+14 files in other folders)
